<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/select_theme_tray"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="20dp"
    android:background="?attr/colorSurface"
    android:translationY="750dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/theme_button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/clear"
        android:contentDescription="@string/black_square"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />


    <TableLayout
        android:id="@+id/select_theme_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/back"
        >

        <TableRow
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <Button
                android:id="@+id/choose_list_ledgr"
                style="@style/ThemeSelectButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/ledgr_primary"
                android:contentDescription="@string/theme_label_ledgr" />

            <Button
                android:id="@+id/choose_list_blue"
                style="@style/ThemeSelectButton"
                android:contentDescription="@string/theme_label_secondary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/ledgr_secondary"/>

            <Button
                android:id="@+id/choose_list_red"
                style="@style/ThemeSelectButton"
                android:contentDescription="@string/theme_label_red"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/red_800" />


        </TableRow>
        <TableRow
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/choose_list_yellow"
                style="@style/ThemeSelectButton"
                android:contentDescription="@string/theme_label_yellow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/yellow_500" />

            <Button
                android:id="@+id/choose_list_purple"
                style="@style/ThemeSelectButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/purple_700"
                android:contentDescription="@string/theme_label_purple" />

        </TableRow>


    </TableLayout>










</androidx.constraintlayout.widget.ConstraintLayout>