<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewTransactionFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".NewTransactionFragment">

        <LinearLayout
            android:id="@+id/display_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/currency_symbol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/NumberDisplay"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/USD"
                />

            <TextView
                android:id="@+id/amount_display"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/NumberDisplay"
                android:text="@string/amount_label"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/currency_symbol"
                />

        </LinearLayout>

        <TableLayout
            android:id="@+id/number_pad_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            style="@style/NumberPad"
            app:layout_constraintTop_toBottomOf="@id/date_layout">

        </TableLayout>
        <LinearLayout
            android:id="@+id/description_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="25dp"
            app:layout_constraintTop_toBottomOf="@id/display_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/transaction_description"
                android:inputType="text"
                app:layout_constraintStart_toStartOf="parent"/>
            <Spinner
                android:id="@+id/categories_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/date_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/description_input_layout">

            <TextView
                android:id="@+id/date_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                />

            <TextView
                android:id="@+id/date_toggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/toggle_arrow_down"
                android:textSize="20sp"
                android:textColor="@color/active"
                android:layout_marginStart="10dp"
                />
        </LinearLayout>

        <Button
            android:id="@+id/transaction_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/number_pad_layout"
            android:layout_gravity="center"
            android:background="@color/active"
            android:textColor="@color/white"
            android:text="@string/transaction_button" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>